<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:padding="6dp"
    android:orientation="vertical"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:gravity="end"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="4"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="1dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_1"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="4"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_2"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="4"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_3"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="4"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_4"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="4"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_5"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />
            </RelativeLayout>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/hands_on_skills"
            android:textColor="@color/blackColor"
            android:textSize="18sp"
            app:fontFamily="@font/roboto" />


    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/projectTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/experience"
                android:textColor="@color/blackColor"
                android:textSize="14sp"
                app:fontFamily="@font/roboto"
                card_view:ignore="MissingConstraints"
                card_view:layout_editor_absoluteX="0dp"
                card_view:layout_editor_absoluteY="9dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/ExperienceTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/experience_title"
                    android:textColor="@color/blackColor"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/companyName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/company_name1"

                    android:textSize="11sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ExperienceTitle1"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/ExperienceTime1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/experience_time1"
                    android:textSize="11sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/companyName1" />


                <TextView
                    android:id="@+id/workedOnTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/worked_with_title"
                    android:textColor="@color/blackColor"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ExperienceTime1"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/ExperienceDescription1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/experience_description"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/workedOnTitle1"
                    card_view:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/WhyChooseAboveFeature1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/why_i_did_choose_above_title_1"
                    android:textColor="@color/blackColor"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ExperienceDescription1"
                    card_view:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/ChooseAboveFeatureAnswer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/why_i_did_choose_work_1"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/WhyChooseAboveFeature1"
                    card_view:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/emailIcon1"
                    android:layout_width="38dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/rizq"
                    app:layout_constraintBottom_toBottomOf="@+id/ExperienceTime1"
                    app:layout_constraintEnd_toStartOf="@+id/ExperienceTitle1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayColor"

                    android:layout_marginTop="10dp"
                    card_view:ignore="MissingConstraints"
                    app:layout_constraintTop_toBottomOf="@+id/ChooseAboveFeatureAnswer1"
                    card_view:layout_editor_absoluteX="0dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/honorsandawards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/honorsandawards"
                android:textColor="@color/blackColor"
                android:textSize="14sp"
                app:fontFamily="@font/roboto"
                card_view:ignore="MissingConstraints"
                card_view:layout_editor_absoluteX="0dp"
                card_view:layout_editor_absoluteY="9dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/awardTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/awardTitle1"
                    android:textColor="@color/blackColor"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/schoolName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/schoolname1"

                    android:textSize="11sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/awardTitle1"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/awardYear1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/awardYear1"
                    android:textSize="11sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/schoolName1" />




                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayColor"

                    android:layout_marginTop="10dp"
                    card_view:ignore="MissingConstraints"
                    app:layout_constraintTop_toBottomOf="@+id/awardYear1"
                    card_view:layout_editor_absoluteX="0dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>
